--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "connect-redis": "^6.1.3",
+    "connect-redis": "^4.0.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
@@ -20,6 +20,7 @@
     "express-session": "^1.17.3",
     "helmet": "^5.1.0",
     "hpp": "^0.2.3",
+    "mariadb": "^3.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
@@ -29,7 +30,7 @@
     "passport-local": "^1.0.0",
     "passport-naver-v2": "^2.0.8",
     "pm2": "^5.2.0",
-    "redis": "^4.1.0",
+    "redis": "^3.0.2",
     "sanitize-html": "^2.7.0",
     "sequelize": "^6.20.0",
     "sequelize-cli": "^6.4.1",
