--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.30.0",
     "connect-redis": "^4.0.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
     "mariadb": "^3.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.5",
     "passport": "^0.6.0",
